# hyswap

./: .buildinfo  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  DISCLAIMER.md  LICENSE.md  README.md  code.json  environment-dev.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  regional_runoff_calculations.ipynb  requirements-dev.txt  requirements.txt  search.html  searchindex.js
.github/: docs.yml
_modules/: index.html
_sources/: index.rst.txt
_static/: bizstyle.css  bizstyle.js  documentation_options.js
docs/: Makefile
example_notebooks/: regional_runoff_calculations.ipynb  single_gage_analysis.ipynb  single_gage_n_day_flows_analysis.ipynb  site_conditions_examples.ipynb
examples/: cumulative_hydrograph_examples.html  flow_duration_curve_examples.html  index.html  percentile_calculation_examples.html  raster_hydrograph_examples.html  regional_runoff_calculations.html  regional_runoff_calculations.ipynb  similarity_examples.html  single_gage_analysis.html  single_gage_analysis.ipynb  single_gage_n_day_flows_analysis.html  single_gage_n_day_flows_analysis.ipynb  site_conditions_examples.html  site_conditions_examples.ipynb  streamflow_duration_hydrograph_examples.html
hyswap/: __init__.py  cumulative.py  exceedance.py  percentiles.py  plots.py  rasterhydrograph.py  runoff.py  similarity.py  utils.py
meta/: calculations.html  contributing.html  disclaimer.html  glossary.html  installation.html
reference/: index.html
tests/: demo_weights.json  demo_weights_table.csv  gen_demo_runoff_data.py  test_cumulative.py  test_plots.py  (+6 more)
(+46 files in other folders)
